# libopkeychain

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
src/: error.c  error.h  shared.c  shared.h  types.h
test/: base64.c
test-data/OP3.agilekeychain/data/default/: .1password.keys  05DC340A1F2641C18618F391C16596C9.1password  0706197D3E154A90B3F71BCFE257E250.1password  0959439F37FC4752B4A9DB2FE551A8B2.1password  0B14D1B25BDF2B6301A29E517978330B.1password  0BD9B21CE0F84F2B8AB837C1C57908B6.1password  1A89C3F7ABB01AA5FA1D051E9C82891C.1password  1BE74A7F70E36DD5EB93CD860894506D.1password  1DF2F90F873D4FF6B86E0385FFCAF7C4.1password  2BEC7D9D7E3666F451DD93CC09E62F6D.1password  32E3E6628668491E975DAD20BAA437D5.1password  38B59DAF691243A79D7B8D1A41487E88.1password  3DE8F7060637415883C82D844154FFD3.1password  3FABD08660B4CC21AD085EDA3CBF4882.1password  5B9F50793105485CAF27D49CAE01F883.1password  60E921739EE6CD7977335808FE7CD0EB.1password  6DC5882B44C148FBB6414367087B74A7.1password  76C26903814E4E6F8FBDA2C7E23426F4.1password  7B347D33B48A348B355A4BE6DAFF521F.1password  7B347D33B48A358B355A4BE6DAFF521F.1password  9732AB50DD34DE082117DB292A87B476.1password  9A788E4B4B424526BA75CF81AB1CC8C9.1password  9DE11C67F9AE443BBAF8E9CF0C923BB9.1password  A14034C684AB4A80B299D6932B26416F.1password  A5493A40E2A8B6116113D709AF722C96.1password  A85735F0181342B29E18D230AAE90C45.1password  B485F1929AC0481D88DEC25CCB700829.1password  BD4F3E4723094E1CB443AE57F4575E65.1password  BF284028C3584B01B3159625776BF9FB.1password  C7A3C80443994890807816DD976656EC.1password  C7DDF25CA2BE472EAE2D33B3326B970C.1password  CF6C0DD083724642BC7E988925289729.1password  D08FABD4D470338EC9CF8F874E022961.1password  D845E3ED91D34EA9A9BBFE0F77580E74.1password  D9162D6F664744C1B7DDA78F7832ADC5.1password  D976F0D177F0435AAD4C3ED704751F41.1password  DC08E95D51EA4244A08474D7B803F750.1password  DC834D7595CB4D8E8DDEB3E35D259079.1password  DF31751EC5D44F84A68AA31E9F3B7D85.1password  E10A2AC2052844E282AAD6BF9E5AD90C.1password  (+7 more)
test-data/OP4.opvault/default/: 2BEF1CB2AB064F46A5A0B949E92FCFAD_37B6186358EE4259B272E052B0336DB3.attachment  54BA024F62AD4E0AB3C09FFDAB26AB30_31FC8FC2778942008CFCCB37452698CD.attachment  band_0.js  band_1.js  band_2.js  band_3.js  band_5.js  band_6.js  band_7.js  band_9.js  band_A.js  band_B.js  band_C.js  band_D.js  band_E.js  band_F.js  folders.js  profile.js
